Removed TimeSpan shims

--- a/bindings/Cargo.toml
+++ b/bindings/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-winrt = "0.7.0"
+# winrt = "0.7.1"
+winrt = { git = "https://github.com/microsoft/winrt-rs.git" }
 
 [build-dependencies]
-winrt = "0.7.0"
+# winrt = "0.7.1"
+winrt = { git = "https://github.com/microsoft/winrt-rs.git" }
