--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2018"
 winit = "0.22.0"
 raw-window-handle = "0.3.3"
 rand = "0.7.3"
-# winrt = "0.7.1"
-winrt = { git = "https://github.com/microsoft/winrt-rs.git" }
+winrt = "0.7.2"
+# winrt = { git = "https://github.com/microsoft/winrt-rs.git" }
 bindings = { path = "bindings" }
