--- a/bindings/Cargo.toml
+++ b/bindings/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-# winrt = "0.7.1"
-winrt = { git = "https://github.com/microsoft/winrt-rs.git" }
+winrt = "0.7.2"
+# winrt = { git = "https://github.com/microsoft/winrt-rs.git" }
 
 [build-dependencies]
-# winrt = "0.7.1"
-winrt = { git = "https://github.com/microsoft/winrt-rs.git" }
+winrt = "0.7.2"
+# winrt = { git = "https://github.com/microsoft/winrt-rs.git" }
