--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,8 @@ authors = ["Joshua Ols"]
 edition = "2018"
 
 [dependencies]
+windows = { git = "https://github.com/microsoft/windows-rs" }
+bindings = { path = "bindings" }
 winit = "0.22.0"
 raw-window-handle = "0.3.3"
 rand = "0.7.3"
-winrt = "0.7.2"
-# winrt = { git = "https://github.com/microsoft/winrt-rs.git" }
-bindings = { path = "bindings" }
