--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Joshua Ols"]
 edition = "2018"
 
 [dependencies]
-windows = { git = "https://github.com/microsoft/windows-rs" }
+windows = "0.2.1"
 bindings = { path = "bindings" }
 winit = "0.22.0"
 raw-window-handle = "0.3.3"
