--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hello-composition-rs"
 version = "0.1.0"
-authors = ["Joshua Ols"]
+authors = ["Joshua Ols <joshua.d.ols@gmail.com>"]
 edition = "2018"
 
 [dependencies]
