--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Joshua Ols <joshua.d.ols@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-windows = "0.3.1"
+windows = { git = "https://github.com/microsoft/windows-rs" }
 bindings = { path = "bindings" }
 winit = "0.22.0"
 raw-window-handle = "0.3.3"
