--- a/bindings/Cargo.toml
+++ b/bindings/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-windows = "0.3.1"
+windows = { git = "https://github.com/microsoft/windows-rs" }
 
 [build-dependencies]
-windows = "0.3.1"
+windows = { git = "https://github.com/microsoft/windows-rs" }
