Updated windows-rs to "0.18.0"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "cSpell.words": [
     "APARTMENTTYPE",
     "consts",
+    "APARTMENTTHREADED",
+    "COINIT",
     "DISPATCHERQUEUE",
     "DQTAT",
     "DQTYPE",
