--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,22 @@ authors = ["Joshua Ols <joshua.d.ols@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-windows = "0.18.0"
-# windows = { git = "https://github.com/microsoft/windows-rs.git" }
-bindings = { path = "bindings" }
 winit = "0.24.0"
 raw-window-handle = "0.3.3"
 rand = "0.8.3"
+
+[dependencies.windows]
+git = "https://github.com/microsoft/windows-rs"
+features = [
+    "Foundation_Collections",
+    "Foundation_Numerics",
+    "Graphics",
+    "System",
+    "UI_Composition_Desktop",
+    "Win32_Foundation",
+    "Win32_Graphics_Gdi",
+    "Win32_System_Com",
+    "Win32_System_LibraryLoader",
+    "Win32_System_WinRT",
+    "Win32_UI_WindowsAndMessaging",
+]
