--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "hello-composition-rs"
 version = "0.1.0"
 authors = ["Joshua Ols <joshua.d.ols@gmail.com>"]
+rust-version = "1.56"
 edition = "2021"
 
 [dependencies]
