--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
+  "editor.defaultFormatter": "matklad.rust-analyzer",
+  "editor.formatOnSave": true,
+  "editor.bracketPairColorization.enabled": true,
+  "editor.guides.bracketPairs": true,
   "cSpell.words": [
     "APARTMENTTYPE",
     "consts",
@@ -17,7 +21,5 @@
     "voxel",
     "voxels",
     "winit"
-  ],
-  "editor.defaultFormatter": "matklad.rust-analyzer",
-  "editor.formatOnSave": true
+  ]
 }
