--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ rand = "0.8.4"
 
 [dependencies.windows]
 # git = "https://github.com/microsoft/windows-rs"
-version = "0.26.0"
+version = "0.27.0"
 features = [
-    "std",
+    "alloc",
     "Foundation_Numerics",
     "System",
     "UI_Composition_Desktop",
