Missed an extension recommendation

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -16,6 +16,9 @@
     // TOML syntax highlighting.
     "tamasfe.even-better-toml",
 
+    // Needed for debugging support.
+    "ms-vscode.cpptools",
+
     // Better than RLS, also needed for rustfmt on save.
     "matklad.rust-analyzer",
 
